executable(
    meson.project_name(),
    asresources,
    'Application.vala',
    'Window.vala',
    'ClutterGstreamer.vala',
    'PlayerPage.vala',
    'BottomBar.vala',
    'TopBar.vala',
    'TimeVideo.vala',
    'TimeMusic.vala',
    'SeekBar.vala',
    'PreviewPopover.vala',
    'PreviewClutterGst.vala',
    'PreviewVideo.vala',
    'Playlist.vala',
    'AsyncImage.vala',
    'DLNAMain.vala',
    'DLNATreeView.vala',
    'DLNAServer.vala',
    'DLNARenderControl.vala',
    'DLNAAction.vala',
    'DLNAVolumeButton.vala',
    'DLNAVolume.vala',
    'MenuLabel.vala',
    'MessageDialog.vala',
    'DownloadDialog.vala',
    'Utils.vala',
    'RightBar.vala',
    'VolumeWiget.vala',
    'SettingsPopover.vala',
    'ACDManager.vala',
    'DVDManager.vala',
    'Inhibitor.vala',
    'MprisPlayer.vala',
    'MprisRoot.vala',
    'Contractor.vala',
    'ZeitgeistManager.vala',
    'WelcomePage.vala',
    'Welcome.vala',
    'WelcomeButton.vala',
    'ScanFolder.vala',
    'DbusThumbnailer.vala',
    'EqualizerPreset.vala',
    'AudioMix.vala',
    'VideoMix.vala',
    'EqualizerGrid.vala',
    'EqualizerPresetList.vala',
    'VideoGrid.vala',
    'Lyric.vala',
    'LyricParser.vala',
    'LyricFormatter.vala',
    'LyricChain.vala',
    'LyricEmptyStringParser.vala',
    'LyricMetadataParser.vala',
    'LyricContentParser.vala',
    'LyricCompressedParser.vala',
    'NotifyBottomBar.vala',
    'VideoPresetList.vala',
    'VideoPreset.vala',
    'OtherGrid.vala',
    'MPRIS.vala',
    'GetLink.vala',
    'InfoBar.vala',
    'ComboxImage.vala',
    'CameraPlayer.vala',
    'MediaEditor.vala',
    'CameraPage.vala',
    'CameraLeftBar.vala',
    'CameraBottomBar.vala',
    'CameraTopBar.vala',
    'CameraRightBar.vala',
    'TimerButton.vala',
    'RepeatButton.vala',
    'ButtonRevealer.vala',
    'VolumeButton.vala',
    'CameraGrid.vala',
    'CameraPreset.vala',
    'CameraPresetList.vala',
    'KeyboardPage.vala',
    'CameraFlash.vala',
    'FlowboxChild.vala',
    'LightDark.vala',
    'MenuLabelRadio.vala',
    'CropDialog.vala',
    'CropView.vala',
    'MediaEntry.vala',
    'HeaderLabel.vala',
    'MakeLyric.vala',
    'CircularGrid.vala',
    'CircularProgressBar.vala',
    'KeyboardInfo.vala',
    'AccelLabel.vala',
    'VideoCrop.vala',
    'LabelSpin.vala',
    'DeviceMonitor.vala',
    'EngineViewlyrics.vala',
    'SearchDialog.vala',
    'EngineNetease.vala',
    'Spectrum.vala',
    'SeekTimeMusic.vala',
    'SearchEntry.vala',
    'DialogImport.vala',
    'BufferSurface.vala',
    'Color.vala',
    'DeleteDialog.vala',

    c_args: c_args,
    dependencies: [
        dependency('gobject-introspection-1.0'),
        dependency('gio-2.0'),
        dependency('gio-unix-2.0'),
        dependency('gobject-2.0'),
        dependency('glib-2.0'),
        dependency('gtk+-3.0'),
        dependency('gdk-3.0'),
        dependency('gdk-x11-3.0'),
        dependency('gdk-pixbuf-2.0'),
        dependency('libsoup-2.4'),
        dependency('clutter-gtk-1.0'),
        dependency('clutter-gst-3.0'),
        dependency('clutter-1.0'),
        dependency('gee-0.8'),
        dependency('cairo'),
        dependency('gstreamer-1.0'),
        dependency('gstreamer-base-1.0'),
        dependency('gstreamer-pbutils-1.0'),
        dependency('gstreamer-tag-1.0'),
        dependency('gupnp-1.2'),
        dependency('gupnp-av-1.0'),
        dependency('gssdp-1.2'),
        dependency('libxml-2.0'),
        dependency('libcanberra'),
        dependency('inytag'),
        dependency('sqlite3'),

        meson.get_compiler('vala').find_library('posix'),
        meson.get_compiler('c').find_library('m', required : false)
    ],
    link_args: ['-lm'],
    install : true
)
