headers = files(
  'inytag.h'
 )

sources = files(
  'inytag.cc'
)

inytag_files = [
    sources,
    headers,
]

install_headers(headers)

add_languages('cpp')
meson.get_compiler('cpp')

inytag_dep = meson.get_compiler('vala').find_library('inytag', dirs: vaapi)

executable(
    meson.project_name(),
    asresources,
    'Application.vala',
    'Window.vala',
    'PlayerPage.vala',
    'BottomBar.vala',
    'TopBar.vala',
    'TimeVideo.vala',
    'TimeMusic.vala',
    'SeekBar.vala',
    'PreviewPopover.vala',
    'Playlist.vala',
    'EngineMegalobiz.vala',
    'DLNAMain.vala',
    'DLNATreeView.vala',
    'DLNAServer.vala',
    'DLNARenderControl.vala',
    'DLNAAction.vala',
    'DLNAVolumeButton.vala',
    'DLNAVolume.vala',
    'MenuLabel.vala',
    'MessageDialog.vala',
    'DownloadDialog.vala',
    'Utils.vala',
    'RightBar.vala',
    'VolumeWiget.vala',
    'SettingsPopover.vala',
    'ACDManager.vala',
    'DVDManager.vala',
    'Inhibitor.vala',
    'MprisPlayer.vala',
    'MprisRoot.vala',
    'Contractor.vala',
    'ZeitgeistManager.vala',
    'WelcomePage.vala',
    'Welcome.vala',
    'WelcomeButton.vala',
    'ScanFolder.vala',
    'DbusThumbnailer.vala',
    'EqualizerPreset.vala',
    'AudioMix.vala',
    'VideoMix.vala',
    'EqualizerGrid.vala',
    'EqualizerPresetList.vala',
    'VideoGrid.vala',
    'Lyric.vala',
    'NotifyBottomBar.vala',
    'VideoPresetList.vala',
    'VideoPreset.vala',
    'OtherGrid.vala',
    'MPRIS.vala',
    'GetLink.vala',
    'InfoBar.vala',
    'ComboxImage.vala',
    'CameraPlayer.vala',
    'MediaEditor.vala',
    'CameraPage.vala',
    'CameraLeftBar.vala',
    'CameraBottomBar.vala',
    'CameraTopBar.vala',
    'CameraRightBar.vala',
    'TimerButton.vala',
    'RepeatButton.vala',
    'ButtonRevealer.vala',
    'VolumeButton.vala',
    'CameraGrid.vala',
    'CameraPreset.vala',
    'CameraPresetList.vala',
    'KeyboardPage.vala',
    'CameraFlash.vala',
    'FlowboxChild.vala',
    'LightDark.vala',
    'MenuLabelRadio.vala',
    'CropDialog.vala',
    'CropView.vala',
    'MediaEntry.vala',
    'HeaderLabel.vala',
    'MakeLyric.vala',
    'CircularGrid.vala',
    'CircularProgressBar.vala',
    'KeyboardInfo.vala',
    'AccelLabel.vala',
    'VideoCrop.vala',
    'LabelSpin.vala',
    'DeviceMonitor.vala',
    'EngineViewlyrics.vala',
    'SearchDialog.vala',
    'EngineNetease.vala',
    'Spectrum.vala',
    'SeekTimeMusic.vala',
    'SearchEntry.vala',
    'DialogImport.vala',
    'BufferSurface.vala',
    'Color.vala',
    'DeleteDialog.vala',
    'ImageCanvas.vala',
    'CoverImage.vala',
    'SmallImage.vala',
    'TittlePango.vala',
    'ArtistPango.vala',
    'NotifyResume.vala',
    'EngineSubtittle4Songs.vala',
    'LyricEngine.vala',
    'Player.vala',
    'TextMix.vala',
    inytag_files,
    'StaticObject.vala',

    c_args: c_args,
    dependencies: [
        dependency('gobject-introspection-1.0'),
        dependency('gio-2.0'),
        dependency('gio-unix-2.0'),
        dependency('gobject-2.0'),
        dependency('glib-2.0'),
        dependency('gtk+-3.0'),
        dependency('gdk-3.0'),
        dependency('gdk-x11-3.0'),
        dependency('gdk-pixbuf-2.0'),
        dependency('libsoup-2.4'),
        dependency('clutter-gtk-1.0'),
        dependency('clutter-gst-3.0'),
        dependency('clutter-1.0'),
        dependency('gee-0.8'),
        dependency('cairo'),
        dependency('gstreamer-1.0'),
        dependency('gstreamer-base-1.0'),
        dependency('gstreamer-pbutils-1.0'),
        dependency('gstreamer-tag-1.0'),
        dependency('gupnp-1.2'),
        dependency('gupnp-av-1.0'),
        dependency('gssdp-1.2'),
        dependency('libxml-2.0'),
        dependency('libcanberra'),
        dependency('taglib_c'),
        dependency('sqlite3'),
        inytag_dep,

        meson.get_compiler('vala').find_library('posix'),
        meson.get_compiler('c').find_library('m', required : false),
        meson.get_compiler('cpp').find_library('inytag', required : false),
    ],
    link_args: ['-lm'],
    install : true
)
